--- a/src/app/courses/home/home.component.html
+++ b/src/app/courses/home/home.component.html
@@ -1,6 +1,4 @@
-
 <div class="courses-panel">
-
     <h2 class="title">All Courses</h2>
 
     <div class="counters">
@@ -10,26 +8,13 @@
     <mat-tab-group>
 
         <mat-tab label="Beginners">
-
-            <courses-card-list
-                    [courses]="beginnerCourses$ | async">
-
+            <courses-card-list [courses]="beginnerCourses$ | async">
             </courses-card-list>
-
         </mat-tab>
 
         <mat-tab label="Advanced">
-
-            <courses-card-list
-                    [courses]="advancedCourses$ | async"
-
-            ></courses-card-list>
-
+            <courses-card-list [courses]="advancedCourses$ | async"></courses-card-list>
         </mat-tab>
-
+        
     </mat-tab-group>
-
-
-
 </div>
-
